Bug 1938110 - Make `HTMLEditor` keep the last typed collapsible white-space visible even after mutations by web apps r=m_kato

Gmail composer puts non-editable `<span>` to show a suggestion to make
autocomplete feature available.  Then, if user types a white-space, Gmail
composer replaces or deletes the non-editable `<span>`.

When user types a white-space before the non-editable `<span>`, our editor does
not think that `<br>` is required to make the white-space visible because of
the following non-editable text.  However, it'll be removed asynchronously.
Then, the white-space becomes invisible trailing white-space of the block and
`Selection` is collapsed after it.  Therefore, following editing behaves odd
because our editor does not handle correctly editing in invisible white-spaces.

As you know, Gecko is the only browser to use the ASCII space (U+0020) as a
trailing collapsible white-space immediately before a block boundary.
Therefore, web apps may implement this feature with similar approach without
taking care of Gecko.  Therefore, we should use a hack for our uses.

Fortunately, this may occurs only when user appends a collapsible white-space
to end of a `Text` node.  Therefore, `HTMLEditor` can cache the last `Text`
node whose last character is recently appended collapsible white-space.
Then, when our mutation observer detects that the white-space becomes invisible,
the mutation observer can put a padding `<br>` element.

Unfortunately, the `<br>` is put with the transaction.  Therefore, undoing it
deletes only the padding `<br>` and does not delete the white-space.  However,
it's hard to touch transaction management right now.  Therefore, this patch
does not fix this issue.

Differential Revision: https://phabricator.services.mozilla.com/D232599